[metadata]
name = umpra
description = preprocessing API for HEP flavour tagging machine learning.
version = attr: umpra.__version__
keywords = machine learning, flavour tagging, preprocessing
url = https://github.com/umami-hep/umpra

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires=
    numpy>=1.21.0
    pandas>=1.3.5
    scipy>=1.8.0
packages = find:

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = E203, E266, W503
max-line-length = 88
select = B,C,E,F,W,T4
# darglint-ignore-regex = *

[darglint]
ignore=DAR203, DAR103
docstring_style=numpy
strictness=full
log_level=INFO

[pylint.FORMAT]
max-line-length = 88

[pylint.'MESSAGES CONTROL']
disable = fixme,duplicate-code
